--- a/index.html
+++ b/index.html
@@ -40,18 +40,48 @@
     </header>
     <section>
       <div class="container">
-        <h1>Our services</h1>
+        <h1 class="services">Our services</h1>
         <div class="wrapper">
           <div class="box">
-            <h3>design</h3>
+            <h3 class="boxTitle">design</h3>
+            <p>
+              Lorem ipsum.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Vestibulum odio leo, auctor vel nisi vel, fringilla varius erat.
+              Nam vitae aliquam ligula. Curabitur lacus nisi, pharetra ac dui a,
+              volutpat posuere ligula.
+            </p>
+            <button class="btn btn-two">read more</button>
             <div class="number">1</div>
           </div>
           <div class="box">
-            <h3>code</h3>
+            <h3 class="boxTitle">code</h3>
+            <p>
+              Lorem ipsum.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Vestibulum odio leo, auctor vel nisi vel, fringilla varius erat.
+              Nam vitae aliquam ligula. Curabitur lacus nisi, pharetra ac dui a,
+              volutpat posuere ligula.
+            </p>
+            <button class="btn btn-three">read more</button>
             <div class="number">2</div>
           </div>
           <div class="box">
-            <h3>marketing</h3>
+            <h3 class="boxTitle">marketing</h3>
+            <p>
+              Lorem ipsum.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Vestibulum odio leo, auctor vel nisi vel, fringilla varius erat.
+              Nam vitae aliquam ligula. Curabitur lacus nisi, pharetra ac dui a,
+              volutpat posuere ligula.
+            </p>
+            <button class="btn btn-four">read more</button>
             <div class="number">3</div>
           </div>
         </div>
