Add section our work with styles

--- a/index.html
+++ b/index.html
@@ -40,14 +40,12 @@
     </header>
     <section>
       <div class="container">
-        <h1 class="services">Our services</h1>
+        <h1 class="section-title">our services</h1>
         <div class="wrapper">
           <div class="box">
-            <h3 class="boxTitle">design</h3>
-            <p>
-              Lorem ipsum.
-            </p>
-            <p>
+            <h3 class="box-title">design</h3>
+            <p class="p1">Lorem ipsum.</p>
+            <p class="p1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Vestibulum odio leo, auctor vel nisi vel, fringilla varius erat.
               Nam vitae aliquam ligula. Curabitur lacus nisi, pharetra ac dui a,
@@ -57,11 +55,9 @@
             <div class="number">1</div>
           </div>
           <div class="box">
-            <h3 class="boxTitle">code</h3>
-            <p>
-              Lorem ipsum.
-            </p>
-            <p>
+            <h3 class="box-title">code</h3>
+            <p class="p1">Lorem ipsum.</p>
+            <p class="p1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Vestibulum odio leo, auctor vel nisi vel, fringilla varius erat.
               Nam vitae aliquam ligula. Curabitur lacus nisi, pharetra ac dui a,
@@ -71,11 +67,9 @@
             <div class="number">2</div>
           </div>
           <div class="box">
-            <h3 class="boxTitle">marketing</h3>
-            <p>
-              Lorem ipsum.
-            </p>
-            <p>
+            <h3 class="box-title">marketing</h3>
+            <p class="p1">Lorem ipsum.</p>
+            <p class="p1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Vestibulum odio leo, auctor vel nisi vel, fringilla varius erat.
               Nam vitae aliquam ligula. Curabitur lacus nisi, pharetra ac dui a,
@@ -83,6 +77,85 @@
             </p>
             <button class="btn btn-four">read more</button>
             <div class="number">3</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <h1 class="section-title">our work</h1>
+        <div class="wrapper">
+          <div class="box-work">
+            <article class="skill-left">
+              <div class="skill-image">
+                <img
+                  src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                  alt="summer1"
+                />
+              </div>
+              <div class="skill-description">
+                <h3 class="skill-title">Article 1</h3>
+                <p class="p2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <p class="p2">Mauris ultricies.</p>
+                <button class="btn btn-five">read more</button>
+              </div>
+            </article>
+          </div>
+          <div class="box-work">
+            <article class="skill-left">
+              <div class="skill-image">
+                <img
+                  src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                  alt="summer1"
+                />
+              </div>
+              <div class="skill-description">
+                <h3 class="skill-title">Article 2</h3>
+                <p class="p2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <p class="p2">Mauris ultricies.</p>
+                <button class="btn btn-five">read more</button>
+              </div>
+            </article>
+          </div>
+          <div class="box-work">
+            <article class="skill-left">
+              <div class="skill-image">
+                <img
+                  src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                  alt="summer1"
+                />
+              </div>
+              <div class="skill-description">
+                <h3 class="skill-title">Article 3</h3>
+                <p class="p2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <p class="p2">Mauris ultricies.</p>
+                <button class="btn btn-five">read more</button>
+              </div>
+            </article>
+          </div>
+          <div class="box-work">
+            <article class="skill-left">
+              <div class="skill-image">
+                <img
+                  src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                  alt="summer1"
+                />
+              </div>
+              <div class="skill-description">
+                <h3 class="skill-title">Article 4</h3>
+                <p class="p2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <p class="p2">Mauris ultricies.</p>
+                <button class="btn btn-five">read more</button>
+              </div>
+            </article>
           </div>
         </div>
       </div>
