Add section contact us with styles

--- a/index.html
+++ b/index.html
@@ -160,5 +160,54 @@
         </div>
       </div>
     </section>
+    <section class="contact-us">
+      <div class="container">
+        <h1 class="section-title">contact us</h1>
+        <div class="wrapper">
+          <form class="contact-form">
+            <input class="input-text" type="text" placeholder="Your name" />
+            <input class="input-text" type="text" placeholder="Your e-mail" />
+            <input class="input-text" type="text" placeholder="Subject" />
+            <textarea
+              class="input-text-big"
+              placeholder="Type your message here"
+            ></textarea>
+            <a href="#" class="btn btn-one">submit</a>
+          </form>
+          <div class="contact-div">
+            <ul>
+              <li class="l1">
+                sales spec
+              </li>
+              <li>
+                Elino Jakastam
+              </li>
+            </ul>
+            <ul>
+              <li class="l1">
+                address
+              </li>
+              <li>
+                299 Browning Lane
+              </li>
+              <li>
+                Cortland
+              </li>
+              <li>
+                13045 New York
+              </li>
+            </ul>
+            <ul>
+              <li class="l1">
+                phone
+              </li>
+              <li>
+                607-123-456
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
