Add footer with styles

--- a/index.html
+++ b/index.html
@@ -210,4 +210,11 @@
       </div>
     </section>
   </body>
+  <footer>
+    <ul class="footer-ul">
+      <li class="footer-li"><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+      <li class="footer-li"><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
+      <li class="footer-li"><a href="#"><i class="fab fa-behance"></i>Behance</a></li>
+    </ul>
+  </footer>
 </html>
