--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project2</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Signika:wght@700&display=swap"
@@ -53,7 +53,7 @@
               volutpat posuere ligula.
             </p>
             <button class="btn btn-two">read more</button>
-            <div class="number">1</div>
+            <div class="number"></div>
           </div>
           <div class="box">
             <h3 class="box-title">code</h3>
@@ -65,7 +65,7 @@
               volutpat posuere ligula.
             </p>
             <button class="btn btn-three">read more</button>
-            <div class="number">2</div>
+            <div class="number"></div>
           </div>
           <div class="box">
             <h3 class="box-title">marketing</h3>
@@ -77,7 +77,7 @@
               volutpat posuere ligula.
             </p>
             <button class="btn btn-four">read more</button>
-            <div class="number">3</div>
+            <div class="number"></div>
           </div>
         </div>
       </div>
@@ -177,34 +177,18 @@
           </form>
           <div class="contact-div">
             <ul>
-              <li class="l1">
-                sales spec
-              </li>
-              <li>
-                Elino Jakastam
-              </li>
+              <li class="l1">sales spec</li>
+              <li>Elino Jakastam</li>
             </ul>
             <ul>
-              <li class="l1">
-                address
-              </li>
-              <li>
-                299 Browning Lane
-              </li>
-              <li>
-                Cortland
-              </li>
-              <li>
-                13045 New York
-              </li>
+              <li class="l1">address</li>
+              <li>299 Browning Lane</li>
+              <li>Cortland</li>
+              <li>13045 New York</li>
             </ul>
             <ul>
-              <li class="l1">
-                phone
-              </li>
-              <li>
-                607-123-456
-              </li>
+              <li class="l1">phone</li>
+              <li>607-123-456</li>
             </ul>
           </div>
         </div>
@@ -213,9 +197,15 @@
   </body>
   <footer>
     <ul class="footer-ul">
-      <li class="footer-li"><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-      <li class="footer-li"><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
-      <li class="footer-li"><a href="#"><i class="fab fa-behance"></i>Behance</a></li>
+      <li class="footer-li">
+        <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+      </li>
+      <li class="footer-li">
+        <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+      </li>
+      <li class="footer-li">
+        <a href="#"><i class="fab fa-behance"></i>Behance</a>
+      </li>
     </ul>
   </footer>
 </html>
